--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Web font example</title>
+  <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Fascinate+Inline" rel="stylesheet">
   <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
